--- a/diamonds_anova_posthoc.ipynb
+++ b/diamonds_anova_posthoc.ipynb
@@ -5,7 +5,7 @@
    "id": "9e71265b-80a6-4dc4-b8a3-9c472ad170c2",
    "metadata": {},
    "source": [
-    "# Advanced Hypothesis Testing on Diamonds: ANOVA & Post Hoc Tests"
+    "# Advanced Statistical Analysis of Diamonds Data"
    ]
   },
   {
