--- a/diamonds_anova_tukey.ipynb
+++ b/diamonds_anova_tukey.ipynb
@@ -19,7 +19,7 @@
     "* **Two-way ANOVA:** Compares the means of one continuous dependent variable based on three or more groups of two categorical variables.\n",
     "* **Post hoc test:** Performs a pairwise comparison between all available groups while controlling for the error rate.\n",
     "\n",
-    "We will be using clean and preprocessed versions of the `diamonds` dataset from the `seaborn` package."
+    "We will be using clean and preprocessed versions of the `diamonds` dataset from the `seaborn` library."
    ]
   },
   {
