--- a/diamonds_anova_tukey.ipynb
+++ b/diamonds_anova_tukey.ipynb
@@ -1259,7 +1259,7 @@
    "source": [
     "We will conduct a post hoc tests for the one-way ANOVA.\n",
     "\n",
-    "One of the most common ANOVA post hoc tests is the **Tukey's HSD (honestly significantly different) test**."
+    "One of the most common ANOVA post hoc tests is the **Tukey's HSD (honestly significantly different)** test."
    ]
   },
   {
