--- a/diamonds_anova_tukey.ipynb
+++ b/diamonds_anova_tukey.ipynb
@@ -15,9 +15,9 @@
    "source": [
     "In this notebook, we will run both a **one-way and two-way ANOVA** test. We'll also run a **post hoc** test to analyze the results of a one-way ANOVA test.\n",
     "\n",
-    "* **One-way ANOVA:** Compares the means of one continuous dependent variable based on three or more groups of one categorical variable.\n",
-    "* **Two-way ANOVA:** Compares the means of one continuous dependent variable based on three or more groups of two categorical variables.\n",
-    "* **Post hoc test:** Performs a pairwise comparison between all available groups while controlling for the error rate.\n",
+    "* **One-Way ANOVA:** Compares the means of one continuous dependent variable based on three or more groups of one categorical variable.\n",
+    "* **Two-Way ANOVA:** Compares the means of one continuous dependent variable based on three or more groups of two categorical variables.\n",
+    "* **Post Hoc Test:** Performs a pairwise comparison between all available groups while controlling for the error rate.\n",
     "\n",
     "We will be using clean and preprocessed versions of the `diamonds` dataset from the `seaborn` library."
    ]
